--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -20,7 +20,7 @@ spec:
   - key: staging
   - key: production
   ingress:
-    domain: ""
+    domain: jenkinsx.zetyun.cn
     externalDNS: false
     namespaceSubDomain: -jx.
     tls:
